cpp/word-count/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.001s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
[ 25%] Building CXX object CMakeFiles/word-count.dir/word_count_test.cpp.o
[ 50%] Building CXX object CMakeFiles/word-count.dir/word_count.cpp.o
[ 75%] Building CXX object CMakeFiles/word-count.dir/test/tests-main.cpp.o
[100%] Linking CXX executable word-count
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
[100%] Built target word-count
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
===============================================================================
All tests passed (13 assertions in 13 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
[100%] Built target test_word-count
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/word-count.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/word-count.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)22123"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
test/catch.hpp                                52      27    51%   1448-1450,1580-1581,1628,1630,1642-1643,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2560
word_count.cpp                                16      16   100%   
word_count_test.cpp                           68      65    95%   93,103-104
------------------------------------------------------------------------------
TOTAL                                        136     108    79%
------------------------------------------------------------------------------
lines: 79.4% (108 out of 136)
branches: 41.5% (171 out of 412)

real	0m12.471s
user	0m11.636s
sys	0m0.827s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.164s
user	0m0.111s
sys	0m0.056s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.166s
user	0m0.126s
sys	0m0.041s

===============================================================================

Running: clang-format-16 -style=file -i ./word_count.cpp ./word_count_test.cpp ./word_count.h

real	0m0.020s
user	0m0.015s
sys	0m0.005s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./word_count.cpp ./word_count_test.cpp ./word_count.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/word_count.h:4:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/word_count.h.

real	0m2.995s
user	0m2.905s
sys	0m0.090s


real	0m2.997s
user	0m2.906s
sys	0m0.090s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
36357 warnings generated.
80661 warnings generated.
80661 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/word_count.h.
Suppressed 80666 warnings (80661 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m16.867s
user	0m16.752s
sys	0m0.113s
Running: clang-tidy-16 ./word_count.cpp ./word_count_test.cpp ./word_count.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/word-count/word_count.h:4:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~


real	0m16.869s
user	0m16.754s
sys	0m0.114s

===============================================================================

